@@ -1365,6 +1365,8 @@ Release 2.7.2 - UNRELEASED
     HADOOP-12465. Incorrect javadoc in WritableUtils.java.
     (Jagadesh Kiran N via aajisaka)
 
+    HADOOP-12464. Interrupted client may try to fail-over and retry (kihwal)
+
 Release 2.7.1 - 2015-07-06 
 
   INCOMPATIBLE CHANGES
